2009-11-29  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/urlwrite.cc (curl_handle::init): Use CURLOPT_USERPWD
	if libcurl ver < 7.19.0.

2009-11-28  Shai Ayal  <shaiay@users.sourceforge.net>

	* gl-render.cc (opengl_renderer::draw_image): Handle indexed images.

2009-11-28  Shai Ayal  <shaiay@users.sourceforge.net>

	* gl-render.h (opengl_renderer::draw): Draw children from end of
	list to preserve correct stacking order (first child should be on
	top).

	* graphics.cc (maybe_set_children): Store sorted child lists.

2009-11-27  Kacper Kowalik <xarthisius.kk@gmail.com>

	* ls-hdf5.cc (have_h5giterate_bug): Drop this group iteration flag
	for buggy pre 1.2.2 versions of hdf5.
	* ov-base-int.cc (octave_base_int_matrix<T>::load_hdf5)
	octave_base_int_scalar<T>::load_hdf5),
	ov-base-int.h (octave_base_int_matrix<T>::load_hdf5,
	octave_base_int_scalar<T>::load_hdf5),
	ov-base.cc (octave_base_value::load_hdf5),
	ov-base.h (octave_base_value::load_hdf5),
	ov-bool-mat.cc (octave_bool_matrix::load_hdf5),
	ov-bool-mat.h (octave_bool_matrix::load_hdf5),
	ov-bool-sparse.cc (octave_sparse_bool_matrix::load_hdf5),
	ov-bool-sparse.h (octave_sparse_bool_matrix::load_hdf5),
	ov-bool.cc (octave_bool::load_hdf5),
	ov-bool.h (octave_bool::load_hdf5),
	ov-cell.cc (octave_cell::load_hdf5),
	ov-cell.h (octave_cell::load_hdf5),
	ov-class.cc (octave_class::load_hdf5),
	ov-class.h (octave_class::load_hdf5),
	ov-complex.cc (octave_complex::load_hdf5),
	ov-complex.h (octave_complex::load_hdf5),
	ov-cx-mat.cc (octave_complex_matrix::load_hdf5),
	ov-cx-mat.h (octave_complex_matrix::load_hdf5),
	ov-cx-sparse.cc (octave_sparse_complex_matrix::load_hdf5),
	ov-cx-sparse.h (octave_sparse_complex_matrix::load_hdf5),
	ov-fcn-handle.cc (octave_fcn_handle::load_hdf5),
	ov-fcn-handle.h (octave_fcn_handle::load_hdf5),
	ov-fcn-inline.cc (octave_fcn_inline::load_hdf5),
	ov-fcn-inline.h (octave_fcn_inline::load_hdf5),
	ov-float.cc (octave_float_scalar::load_hdf5),