@@ -1,5 +1,10 @@
 2009-11-29  Jaroslav Hajek  <highegg@gmail.com>
 
+	* pt-unop.cc (tree_prefix_expression::rvalue1): Try to use
+	octave_value::do_non_const_unary_op.
+
+2009-11-29  Jaroslav Hajek  <highegg@gmail.com>
+
 	* DLD-FUNCTIONS/urlwrite.cc (curl_handle::init): Use CURLOPT_USERPWD
 	if libcurl ver < 7.19.0.
 
